Derivative pricer (#4)
* add derivative pricer first draft

* add derivative pricer aeron adaptor drafts

* add derivative pricer partition functions

* add derivative pricer partition functions