@@ -61,9 +61,9 @@
             <version>3.4.4</version> <!-- Latest release version as of now -->
         </dependency>
     </dependencies>
-
+<!-- 
     <build>
-        <plugins>
+        <plugins> -->
             <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-clean-plugin</artifactId>
@@ -130,6 +130,19 @@
               </execution>
             </executions>
           </plugin> -->
-        </plugins>
-    </build>
+        <!-- </plugins>
+    </build> -->
+    <build>
+  <plugins>
+    <plugin>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <configuration>
+        <argLine>
+          --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+        </argLine>
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+
 </project>
